--- a/ListViewPractica4.1/app/src/main/res/layout/opcion.xml
+++ b/ListViewPractica4.1/app/src/main/res/layout/opcion.xml
@@ -1,8 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:orientation="horizontal">
 
-</android.support.constraint.ConstraintLayout>
+    <ImageView
+        android:id="@+id/Imagen"
+        android:layout_width="70dp"
+        android:layout_height="60dp" />
+
+    <TextView
+        android:id="@+id/Deporte"
+        android:layout_width="180dp"
+        android:layout_height="50dp"
+        android:textSize="50px"
+        android:textStyle="normal"/>
+
+    <CheckBox
+        android:id="@+id/checkbox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="false"
+        android:focusable="false"/>
+</LinearLayout>
