--- a/ListViewActividad5/app/src/main/res/layout/activity_main.xml
+++ b/ListViewActividad5/app/src/main/res/layout/activity_main.xml
@@ -7,9 +7,16 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
+    <Button
+        android:id="@+id/nuevoArticulo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="nuevoArticuloLista"
+        android:text="Nuevo Producto" />
+
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="match_parent"
+        android:layout_width="363dp"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:gravity="center"
@@ -21,6 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
+        android:gravity="center"
         android:text="Manten presionado un producto para modificarlo." />
 
     <TextView
@@ -29,15 +37,23 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:text="Usa el boton de la parte superior para añadir nuevos productos" />
+        android:gravity="center"
+        android:text="Usa el boton de la parte superior para añadir nuevos productos o borrar la lista" />
 
     <ScrollView
+        android:id="@+id/nuevoArticulo"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" />
+            android:orientation="vertical">
+
+            <ListView
+                android:id="@+id/miLista"
+                android:layout_width="match_parent"
+                android:layout_height="370dp" />
+        </LinearLayout>
     </ScrollView>
 </LinearLayout>
