--- a/IntentExplicitoApk6/app/src/main/res/layout/activity_main.xml
+++ b/IntentExplicitoApk6/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="21dp"
         android:layout_marginTop="95dp"
+        android:onClick="lanzar"
         android:text="Alta Contacto" />
 
     <Button
@@ -46,5 +47,17 @@
         android:paddingLeft="10dp"
         android:text="Datos de Contacto"
         android:textSize="18sp" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="match_parent"
+        android:layout_height="129dp"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="0dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:text="No hay contactos"
+        android:textSize="25sp" />
 
 </RelativeLayout>
