--- a/IntentExplicitoApk6/app/src/main/res/layout/activity_main.xml
+++ b/IntentExplicitoApk6/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="21dp"
         android:layout_marginTop="95dp"
-        android:onClick="lanzar"
+        android:onClick="modificar"
         android:text="Alta Contacto" />
 
     <Button
@@ -33,6 +33,7 @@
         android:layout_alignParentEnd="true"
         android:layout_alignTop="@+id/buttonAltaContacto"
         android:layout_marginEnd="21dp"
+        android:onClick="modificar"
         android:text="Modificar Contacto" />
 
     <TextView
