--- a/IntentExplicitoApk6/app/src/main/res/layout/modificar_contacto_activity.xml
+++ b/IntentExplicitoApk6/app/src/main/res/layout/modificar_contacto_activity.xml
@@ -17,10 +17,8 @@
         android:id="@+id/textViewApellidos2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/editTextNombre"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="92dp"
         android:text="Nombre"
         android:textSize="20sp" />
 
@@ -28,29 +26,18 @@
         android:id="@+id/textViewApellidos2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="146dp"
+        android:layout_alignParentTop="false"
+        android:layout_alignStart="@+id/textViewApellidos2"
+        android:layout_marginTop="169dp"
         android:text="Apellidos"
         android:textSize="20sp" />
 
     <EditText
         android:id="@+id/editTextApellidos"
-        android:layout_width="225dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/editTextNombre"
-        android:layout_below="@+id/textViewApellidos2"
-        android:ems="10"
-        android:inputType="textPersonName" />
-
-    <EditText
-        android:id="@+id/editTextNombre"
-        android:layout_width="225dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignTop="@+id/textViewApellidos2"
-        android:layout_marginEnd="21dp"
+        android:layout_alignBottom="@+id/textViewApellidos2"
+        android:layout_alignStart="@+id/button"
         android:ems="10"
         android:inputType="textPersonName" />
 
@@ -58,8 +45,17 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignStart="@+id/editTextApellidos"
-        android:layout_marginBottom="216dp"
+        android:layout_centerInParent="true"
+        android:onClick="respuesta"
         android:text="Aceptar" />
+
+    <EditText
+        android:id="@+id/editTextNombre"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignStart="@+id/editTextApellidos"
+        android:layout_marginTop="79dp"
+        android:ems="10"
+        android:inputType="textPersonName" />
 </RelativeLayout>
