apk 8 con ficheros

--- a/Apk8Ficheros/app/src/main/res/layout/activity_main.xml
+++ b/Apk8Ficheros/app/src/main/res/layout/activity_main.xml
@@ -50,8 +50,10 @@
             android:paddingLeft="5dp">
 
             <ListView
+                android:id="@+id/miLista"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="420dp" />
+
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
